wk_taa_taaqa/src/objects/Professional_Software_Revenue__c.object
<CustomObject>
    <fields>
        <fullName>X2015_Active_Data_Total__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2015 Active Data Total</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2015_Active_Data_Training__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2015 Active Data Training</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2015_Axcess_Document_Software__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2015 Axcess Document Software</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2015_Axcess_Document_Total__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2015 Axcess Document Total</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2015_Axcess_Document_Training__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2015 Axcess Document Training</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2015_Axcess_Practice_Software__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2015 Axcess Practice Software</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2015_Axcess_Practice_Total__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2015 Axcess Practice Total</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2015_Axcess_Practice_Training__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2015 Axcess Practice Training</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2015_Axcess_Tax_Software__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2015 Axcess Tax Software</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2015_Axcess_Tax_Total__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2015 Axcess Tax Total</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2015_Axcess_Tax_Training__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2015 Axcess Tax Training</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2015_Axcess_Workstream_Software__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2015 Axcess Workstream Software</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2015_Axcess_Workstream_Total__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2015 Axcess Workstream Total</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2015_Axcess_Workstream_Training__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2015 Axcess Workstream Training</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2015_Document_OP_Software__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2015 Document OP Software</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2015_Document_OP_Total__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2015 Document OP Total</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2015_Document_OP_Training__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2015 Document OP Training</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2015_Document_Software__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2015 Document Software</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2015_Document_Total__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2015 Document Total</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2015_Document_Training__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2015 Document Training</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2015_ELF_Total__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2015 ELF Total</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2015_Engagement_Software__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2015 Engagement Software</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2015_Engagement_Total__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2015 Engagement Total</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2015_Engagement_Training__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2015 Engagement Training</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2015_Fixed_Assets_Software__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2015 Fixed Assets Software</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2015_Fixed_Assets_Total__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2015 Fixed Assets Total</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2015_Fixed_Assets_Training__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2015 Fixed Assets Training</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2015_Globalfx__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2015 Globalfx Total</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2015_KCN_OP_Software__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2015 KCN OP Software</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2015_KCN_OP_Total__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2015 KCN OP Total</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2015_KCN_OP_Training__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2015 KCN OP Training</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2015_KCN_SaaS_Software__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2015 KCN SaaS Software</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2015_KCN_SaaS_Total__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2015 KCN SaaS Total</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2015_KCN_SaaS_Training__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2015 KCN SaaS Training</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2015_Knowledge_Coach_Software__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2015 Knowledge Coach Software</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2015_Knowledge_Coach_Training__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2015 Knowledge Coach Training</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2015_Knowledge_Coach_total__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2015 Knowledge Coach total</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2015_Knowledge_Tools_Software__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2015 Knowledge Tools Software</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2015_Knowledge_Tools_Total__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2015 Knowledge Tools Total</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2015_Knowledge_Tools_Training__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2015 Knowledge Tools Training</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2015_Org_PF_Total__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2015 Org/PF Total</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2015_Outsource_Total__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2015 Outsource Total</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2015_Portal_Software__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2015 Portal Software</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2015_Portal_Total__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2015 Portal Total</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2015_Portal_Training__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2015 Portal Training</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2015_Practice_Management_Software__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2015 Practice Management Software</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2015_Practice_Management_Total__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2015 Practice Management Total</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2015_Practice_Management_Training__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2015 Practice Management Training</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2015_Practice_Software__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2015 Practice Software</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2015_Practice_Total__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2015 Practice Total</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2015_Practice_Training__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2015 Practice Training</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2015_Scan_SaaS_Software__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2015 Scan SaaS Software</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2015_Scan_SaaS_Total__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2015 Scan SaaS Total</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2015_Scan_SaaS_Training__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2015 Scan SaaS Training</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2015_Scan_Software__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2015 Scan Software</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2015_Scan_Total__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2015 Scan Total</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2015_Scan_Training__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2015 Scan Training</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2015_Tax_Authorizations__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2015 Tax Authorizations</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2015_Tax_Software__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2015 Tax Software</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2015_Tax_Total__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2015 Tax Total</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2015_Tax_Training__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2015 Tax Training</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2015_Trial_Balance_Software__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2015 Trial Balance Software</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2015_Trial_Balance_Total__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2015 Trial Balance Total</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2015_Trial_Balance_Training__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2015 Trial Balance Training</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2016_Fixed_Assets_Manager_Software__c</fullName>
        <label>2016 Fixed Assets Manager Software</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2016_Fixed_Assets_Manager_Total__c</fullName>
        <label>2016 Fixed Assets Manager Total</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2016_Fixed_Assets_Manager_Training__c</fullName>
        <label>2016 Fixed Assets Manager Training</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2016_Globalfx_Total__c</fullName>
        <label>2016 Globalfx Total</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2017_Fixed_Assets_Manager_Software__c</fullName>
        <label>2017 Fixed Assets Manager Software</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2017_Fixed_Assets_Manager_Total__c</fullName>
        <label>2017 Fixed Assets Manager Total</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2017_Fixed_Assets_Manager_Training__c</fullName>
        <label>2017 Fixed Assets Manager Training</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2018_Fixed_Assets_Manager_Software__c</fullName>
        <label>2018 Fixed Assets Manager Software</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2018_Fixed_Assets_Manager_Total__c</fullName>
        <label>2018 Fixed Assets Manager Total</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2018_Fixed_Assets_Manager_Training__c</fullName>
        <label>2018 Fixed Assets Manager Training</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Professional Software Revenue</label>
    <nameField>
        <label>Professional Software Revenue Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Professional_Software_Revenues</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>